--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,178 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
-    margin: 40px auto;
-    max-width: 650px;
     line-height: 1.6;
-    font-size: 18px;
+    font-size: 20px;
     color: #444;
-    padding: 0 10px;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0 -15px 0 0;
+}
+
+::-webkit-scrollbar {
+    background-color: transparent;
+    width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(221, 221, 221, 0);
+    border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(221, 221, 221, 0.75);
+
+}
+
+header {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    position: relative;
+    height: 300px;
+    background-image: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
+    border-bottom-left-radius: 80% 10%;
+    border-bottom-right-radius: 80% 10%;
+    margin-top: -24px;
+    padding: 10px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.25);
+}
+
+@media all and (min-width: 320px) and (max-width: 374px) {
+    .headerName {
+        font-size: 30px;
+    }
+
+    .headerMisc {
+        font-size: 16px;
+    }
+}
+
+@media all and (min-width: 375px) and (max-width: 424px) {
+    .headerName {
+        font-size: 35px;
+    }
+}
+
+@media all and (max-width: 600px) {
+    .mainBody {
+        margin: 10px !important;
+    }
+}
+
+.headerName {
+    order: 1;
+    flex-grow: 1;
+    text-shadow: 0 2px 8px rgba(0,0,0,0.25);
+    margin-top: 40px;
+}
+
+.headerMisc {
+    order: 2;
+    flex-grow: 1;
+    color: #eeeeee;
+    text-shadow: 0 1px 3px rgba(0,0,0,0.33);
+}
+
+.navigation {
+    order: 3;
+    flex-grow: 1;
+}
+
+.mainBody {
+    max-width: 600px;
+    margin: 0 auto;
+    align-self: center;
+}
+
+p {
+    max-width: 600px;
+    text-align: justify;
+    text-align-last: center;
+}
+
+ul {
+    margin: 30px;
+    padding: 0;
+    list-style: none;
+}
+
+li {
+    padding: 0 20px 0 20px;
+    display: inline-block;
+}
+
+.navLink {
+    text-decoration: none;
+}
+
+.navLink span {
+    display: inline-block;
+    color: white;
+    -webkit-transition: color .2s ease;
+    -moz-transition: color .2s ease;
+    -o-transition: color .2s ease;
+    transition: color .2s ease;
+    padding-bottom: 2px;
+    position: relative;
+    border-bottom: 2px solid transparent;
+}
+
+.navLink span:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 0;
+    -webkit-transition: width 0s ease, background .2s ease;
+    -moz-transition: width 0s ease, background .2s ease;
+    -o-transition: width 0s ease, background .2s ease;
+    transition: width 0s ease, background .2s ease;
+}
+
+.navLink span:after {
+    content: '';
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 2px;
+    width: 0;
+    background: rgba(255, 255, 255, 0.75);
+    -webkit-transition: width .2s ease;
+    -moz-transition: width .2s ease;
+    -o-transition: width .2s ease;
+    transition: width .2s ease;
+}
+
+.navLink span:hover:before {
+    width: 100%;
+    background: rgba(255, 255, 255, 0.75);
+    -webkit-transition: width .2s ease;
+    -moz-transition: width .2s ease;
+    -o-transition: width .2s ease;
+    transition: width .2s ease;
+}
+
+.navLink span:hover:after {
+    width: 100%;
+    background: transparent;
+    transition-delay: .2s;
+    -webkit-transition: all 0s ease;
+    -moz-transition: all 0s ease;
+    -o-transition: all 0s ease;
+    transition: all 0s ease;
+}
+
+.navLink span:hover {
+    color: #eee;
 }
