--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,6 +45,12 @@ header {
     box-shadow: 0 2px 10px rgba(0,0,0,0.25);
 }
 
+footer{
+    position: relative;
+    height: 100px;
+    background-image: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
+}
+
 @media all and (min-width: 320px) and (max-width: 374px) {
     .headerName {
         font-size: 30px;
@@ -53,15 +59,27 @@ header {
     .headerMisc {
         font-size: 16px;
     }
-}
 
-@media all and (min-width: 375px) and (max-width: 424px) {
-    .headerName {
-        font-size: 35px;
+    li {
+        padding: 5px 20px 5px 20px !important;
     }
 }
 
-@media all and (max-width: 600px) {
+@media all and (min-width: 375px) and (max-width: 480px) {
+    .headerName {
+        font-size: 35px;
+    }
+
+    .navigation {
+        overflow: hidden;
+    }
+
+    li {
+        padding: 10px 30px 10px 30px !important;
+    }
+}
+
+@media all and (max-width: 980px) {
     .mainBody {
         margin: 10px !important;
     }
@@ -91,14 +109,22 @@ header {
 }
 
 .mainBody {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
-    max-width: 600px;
+    max-width: 980px !important;
     margin: 0 auto;
     align-self: center;
 }
 
 #bodyHeader {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     order: 1;
     flex-direction: row;
@@ -116,21 +142,55 @@ header {
 
 .bodyText {
     order: 2;
-    max-width: 600px;
+    max-width: 980px;
     text-align: justify;
     text-align-last: left;
 }
 
-#miscHeader {
+#skillsHeader {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    order: 3;
+    order: 4;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#skillsText {
+    order: 5;
+}
+
+#projectsHeader {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    order: 6;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#projectsText {
+    order: 7;
+}
+
+#miscHeader {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    order: 8;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .miscText {
-    order: 4;
-    max-width: 600px;
+    order: 9;
+    max-width: 980px;
     text-align: justify;
     text-align-last: left;
 }
@@ -148,6 +208,7 @@ li {
 
 .navLink {
     text-decoration: none;
+    text-shadow: 0 1px 3px rgba(0,0,0,0.33);
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
@@ -212,5 +273,20 @@ li {
 }
 
 .navLink span:hover {
+    color: #eee;
+}
+
+footer {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+}
+
+.footerText {
+    align-self: center;
+    font-family: 'Roboto', sans-serif;
     color: #eee;
 }
