--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,16 +32,20 @@ header {
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: white;
     position: relative;
-    height: 300px;
+    height: 250px;
     background-image: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
     border-bottom-left-radius: 80% 10%;
     border-bottom-right-radius: 80% 10%;
     margin-top: -24px;
     padding: 10px;
     text-align: center;
+    vertical-align: middle;
     font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     box-shadow: 0 2px 10px rgba(0,0,0,0.25);
 }
 
@@ -54,14 +58,20 @@ footer{
 @media all and (min-width: 320px) and (max-width: 374px) {
     .headerName {
         font-size: 30px;
+        max-height: 48px !important;
     }
 
     .headerMisc {
         font-size: 16px;
+        min-height: 48px !important;
     }
 
     li {
-        padding: 5px 20px 5px 20px !important;
+        padding: 5px 5px 5px 5px !important;
+    }
+
+    .footerText {
+        font-size: 14px;
     }
 }
 
@@ -70,12 +80,20 @@ footer{
         font-size: 35px;
     }
 
+    .headerMisc {
+        min-height: 48px !important;
+    }
+
     .navigation {
         overflow: hidden;
     }
 
     li {
-        padding: 10px 30px 10px 30px !important;
+        padding: 10px 10px 10px 10px !important;
+    }
+
+    .footerText {
+        font-size: 16px;
     }
 }
 
@@ -90,22 +108,33 @@ footer{
 }
 
 .headerName {
+    max-height: 64px;
     order: 1;
-    flex-grow: 1;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
     text-shadow: 0 2px 8px rgba(0,0,0,0.25);
     margin-top: 40px;
+    margin-bottom: 0;
+    font-weight: 300;
 }
 
 .headerMisc {
+    padding-top: 15px;
+    min-height: 64px;
     order: 2;
-    flex-grow: 1;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
     color: #eeeeee;
     text-shadow: 0 1px 3px rgba(0,0,0,0.33);
 }
 
 .navigation {
+    max-height: 64px;
     order: 3;
     flex-grow: 1;
+    flex-wrap: nowrap;
+    align-items: center;
+    vertical-align: middle;
 }
 
 .mainBody {
@@ -116,7 +145,7 @@ footer{
     display: flex;
     flex-direction: column;
     max-width: 980px !important;
-    margin: 0 auto;
+    margin: 20px auto;
     align-self: center;
 }
 
@@ -129,6 +158,8 @@ footer{
     order: 1;
     flex-direction: row;
     justify-content: space-between;
+    max-height: 60px;
+    font-weight: bold;
 }
 
 .upArrow {
@@ -137,7 +168,9 @@ footer{
 }
 
 .bodyTitle {
+    margin: 0;
     display: inline-block;
+    font-weight: 800 !important;
 }
 
 .bodyText {
@@ -145,6 +178,12 @@ footer{
     max-width: 980px;
     text-align: justify;
     text-align-last: left;
+}
+
+.bodyText p {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-weight: 300 !important;
 }
 
 #skillsHeader {
@@ -178,6 +217,7 @@ footer{
 }
 
 #miscHeader {
+    margin: 0;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -186,6 +226,7 @@ footer{
     order: 8;
     flex-direction: row;
     justify-content: space-between;
+    font-weight: 800 !important;
 }
 
 .miscText {
@@ -193,10 +234,16 @@ footer{
     max-width: 980px;
     text-align: justify;
     text-align-last: left;
+    font-weight: 300 !important;
+}
+
+.miscText p {
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 ul {
-    margin: 30px;
+    margin-top: 2px;
     padding: 0;
     list-style: none;
 }
