--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,14 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: rgba(221, 221, 221, 0.75);
+}
 
+::-webkit-scrollbar:horizontal {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+    background-image: linear-gradient( to right, #CE9FFC 0%, #7367F0 100%);
 }
 
 header {
@@ -49,13 +56,11 @@ header {
     box-shadow: 0 2px 10px rgba(0,0,0,0.25);
 }
 
-footer{
-    position: relative;
-    height: 100px;
-    background-image: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
-}
-
 @media all and (min-width: 320px) and (max-width: 374px) {
+    body {
+        margin: 0;
+    }
+
     .headerName {
         font-size: 30px;
         max-height: 48px !important;
@@ -76,6 +81,10 @@ footer{
 }
 
 @media all and (min-width: 375px) and (max-width: 480px) {
+    body {
+        margin: 0;
+    }
+
     .headerName {
         font-size: 35px;
     }
@@ -88,7 +97,7 @@ footer{
         overflow: hidden;
     }
 
-    li {
+    .menuItem {
         padding: 10px 10px 10px 10px !important;
     }
 
@@ -137,118 +146,13 @@ footer{
     vertical-align: middle;
 }
 
-.mainBody {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    max-width: 980px !important;
-    margin: 20px auto;
-    align-self: center;
-}
-
-#bodyHeader {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 1;
-    flex-direction: row;
-    justify-content: space-between;
-    max-height: 60px;
-    font-weight: bold;
-}
-
-.upArrow {
-    display: none;
-    align-self: center;
-}
-
-.bodyTitle {
-    margin: 0;
-    display: inline-block;
-    font-weight: 800 !important;
-}
-
-.bodyText {
-    order: 2;
-    max-width: 980px;
-    text-align: justify;
-    text-align-last: left;
-}
-
-.bodyText p {
-    margin-top: 0;
-    margin-bottom: 20px;
-    font-weight: 300 !important;
-}
-
-#skillsHeader {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 4;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#skillsText {
-    order: 5;
-}
-
-#projectsHeader {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 6;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#projectsText {
-    order: 7;
-}
-
-#miscHeader {
-    margin: 0;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 8;
-    flex-direction: row;
-    justify-content: space-between;
-    font-weight: 800 !important;
-}
-
-.miscText {
-    order: 9;
-    max-width: 980px;
-    text-align: justify;
-    text-align-last: left;
-    font-weight: 300 !important;
-}
-
-.miscText p {
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-
-ul {
+.menu {
     margin-top: 2px;
     padding: 0;
     list-style: none;
 }
 
-li {
+.menuItem {
     padding: 0 20px 0 20px;
     display: inline-block;
 }
@@ -323,6 +227,172 @@ li {
     color: #eee;
 }
 
+.mainBody {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+    max-width: 980px !important;
+    margin: 20px auto;
+    align-self: center;
+}
+
+#bodyHeader {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    order: 1;
+    flex-direction: row;
+    justify-content: space-between;
+    max-height: 60px;
+    font-weight: bold;
+}
+
+.upArrow {
+    display: none;
+    align-self: center;
+}
+
+.bodyTitle {
+    margin: 0;
+    display: inline-block;
+    font-weight: 800 !important;
+}
+
+.bodyText {
+    order: 2;
+    max-width: 980px;
+    text-align: justify;
+    text-align-last: left;
+}
+
+.bodyText p {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-weight: 300 !important;
+}
+
+#skillsHeader {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    order: 4;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#skillsText {
+    order: 5;
+    overflow: auto;
+    white-space: nowrap;
+}
+
+.skills {
+    display: inline-block;
+}
+
+.skillsList {
+    list-style: none;
+    padding: 0 10px 0 0;
+}
+
+#projectsHeader {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    order: 6;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#projectsList {
+    order: 7;
+    overflow: auto;
+    white-space: nowrap;
+    padding: 10px;
+    max-height: 320px;
+    overflow-y: hidden;
+}
+
+.projectsItem {
+    width: 300px;
+    height: 200px;
+    display: inline-block;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.25);
+    white-space: normal;
+    vertical-align: middle;
+}
+
+.projectHeader {
+    font-size: 22px;
+    margin-bottom: 0;
+}
+
+.projectBody{
+    padding: 0 20px 20px 20px;
+    font-size: 14px;
+}
+
+#miscHeader {
+    margin: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    order: 8;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: 800 !important;
+}
+
+.miscText {
+    order: 9;
+    max-width: 980px;
+    text-align: justify;
+    text-align-last: left;
+    font-weight: 300 !important;
+}
+
+.miscText p {
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.contactList {
+    margin: 15px 0 15px 0;
+    padding: 0;
+    list-style: none;
+}
+
+.contactItem {
+    padding: 20px 0 20px 0;
+}
+
+.webLink {
+    color: #444;
+}
+
+.webLink:hover {
+    text-decoration: none;
+}
+
+.webLink:active {
+    color: #444;
+}
+
+.webLink:visited {
+    color: #444;
+}
+
 footer {
     display: -webkit-box;
     display: -moz-box;
@@ -330,6 +400,9 @@ footer {
     display: -webkit-flex;
     display: flex;
     justify-content: center;
+    position: relative;
+    height: 100px;
+    background-image: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
 }
 
 .footerText {
