--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,175 +1,190 @@
 html {
-    overflow-x: hidden;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
-    line-height: 1.6;
-    font-size: 20px;
     color: #444;
-    font-family: 'Open Sans', sans-serif;
-    margin: 0 -15px 0 0;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 1.25em;
 }
 
-::-webkit-scrollbar {
-    background-color: transparent;
-    width: 15px;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: rgba(221, 221, 221, 0);
-    border-radius: 15px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(221, 221, 221, 0.75);
-}
-
-::-webkit-scrollbar:horizontal {
-    width: 5px;
-}
-
-::-webkit-scrollbar-thumb:horizontal {
-    background-image: linear-gradient( to right, #CE9FFC 0%, #7367F0 100%);
-}
-
-header {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.header {
+    margin: auto;
     color: white;
-    position: relative;
-    height: 250px;
     background-image: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
-    border-bottom-left-radius: 80% 10%;
-    border-bottom-right-radius: 80% 10%;
-    margin-top: -24px;
-    padding: 10px;
-    text-align: center;
-    vertical-align: middle;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.25);
 }
 
-@media all and (min-width: 320px) and (max-width: 374px) {
-    body {
-        margin: 0;
-    }
-
-    .headerName {
-        font-size: 30px;
-        max-height: 48px !important;
-    }
-
-    .headerMisc {
-        font-size: 16px;
-        min-height: 48px !important;
-    }
-
-    .menuItem {
-        padding: 5px 2px !important;
-    }
-    
-    .skillsItem {
-        font-size: 18px;
-    }
-
-    .footerText {
-        font-size: 14px;
-    }
+.center {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
 }
 
-@media all and (min-width: 375px) and (max-width: 480px) {
-    body {
-        margin: 0;
-    }
-
-    .headerName {
-        font-size: 35px;
-    }
-
-    .headerMisc {
-        min-height: 48px !important;
-    }
-
-    .navigation {
-        overflow: hidden;
-    }
-
-    .menuItem {
-        padding: 10px 5px !important;
-    }
-
-    .footerText {
-        font-size: 16px;
-    }
+h1, h2, h3, h4, h5, h6, p, a, aside {
+    margin-top: 0;
 }
 
-@media all and (max-width: 980px) {
-    .mainBody {
-        margin: 10px !important;
-    }
-
-    .upArrow {
-        margin: 10px !important;
-    }
+h1 {
+    font-size: 3em;
+    font-weight: 400;
+    padding: 0 64px;
 }
 
-.headerName {
-    max-height: 64px;
-    order: 1;
-    -moz-box-flex: 1;
-    -webkit-box-flex: 1;
-    text-shadow: 0 2px 8px rgba(0,0,0,0.25);
-    margin-top: 40px;
-    margin-bottom: 0;
+h2 {
+    font-size: 2em;
+    font-weight: 400;
+}
+
+h3 {
+    font-size: 1.5em;
     font-weight: 300;
 }
 
-.headerMisc {
-    padding-top: 15px;
-    min-height: 64px;
-    order: 2;
-    -moz-box-flex: 1;
-    -webkit-box-flex: 1;
-    color: #eeeeee;
-    text-shadow: 0 1px 3px rgba(0,0,0,0.33);
-}
-
-.navigation {
-    max-height: 64px;
-    order: 3;
-    flex-grow: 1;
-    flex-wrap: nowrap;
-    align-items: center;
-    vertical-align: middle;
-}
-
-.menu {
-    margin-top: 2px;
-    padding: 0;
-    list-style: none;
-}
-
-.menuItem {
-    padding: 0 20px 0 20px;
-    display: inline-block;
-}
-
-.navLink {
+a:not(:hover) {
     text-decoration: none;
-    text-shadow: 0 1px 3px rgba(0,0,0,0.33);
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-.navLink span {
+aside {
+    font-size: 0.825em;
+}
+
+.about {
+    font-size: 1.25em;
+    text-align: justify;
+}
+
+@media (max-width: 1200px) {
+    .about {
+        font-size: 1em;
+        text-align: justify;
+    }
+    h1 {
+        font-size: 2.5em;
+        padding: 0 32px;
+    }
+    .p--64 {
+        padding: 0 32px !important;
+    }
+    h2 {
+        font-size: 1.5em;
+        font-weight: 400;
+    }
+    h3 {
+        font-size: 1em;
+        font-weight: 400;
+    }
+}
+
+@media (max-width: 767px) {
+    .about {
+        font-size: 0.825em;
+    }
+    h1 {
+        font-size: 2em;
+        padding: 0 16px;
+    }
+    .p--64 {
+        padding: 0 16px !important;
+    }
+    h2 {
+        font-size: 1.25em;
+    }
+    h3 {
+        font-size: 1em;
+    }
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.avatar {
+    border-radius: 50%;
+    width: 150px;
+    display: inline;
+}
+
+.fp-next {
+    border-color: transparent transparent transparent #CE9FFC !important;
+    border-width: 19.25px 0px 19.25px 17px !important;
+}
+
+.fp-prev {
+    border-color: transparent #7367F0 transparent transparent !important;
+    border-width: 19.25px 17px 19.25px 0 !important;
+}
+
+.slide {
+    height: 80vh;
+}
+
+.p--64 {
+    padding: 0 64px;
+}
+
+.scrollable-element {
+    max-height: 65vh;
+    overflow-y: scroll;
+}
+
+.fadein {
+    animation: fadeIn 0.5s ease forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.project-images-spaced {
+    padding: 2em 0;
+    max-width: 93vw;
+    display: flex;
+    justify-content: space-around;
+}
+
+.project-images-spaced div{
+    max-width: 33%;
+}
+
+@media (max-width: 992px) {
+    .project-images-spaced {
+        overflow-x: scroll;
+        flex-direction: column;
+    }
+    .project-images-spaced div{
+        align-self: center;
+        max-width: 75%;
+    }
+}
+
+.project-image {
+    height: 100%;
+    width: 100%;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 9px 14px 0 rgba(42, 40, 65, 0.09);
+    box-shadow: 0 9px 14px 0 rgba(42, 40, 65, 0.09);
+}
+
+.nav-link span a {
     display: inline-block;
-    color: white;
+    text-decoration: none !important;
+    color: #444;
     -webkit-transition: color .2s ease;
     -moz-transition: color .2s ease;
     -o-transition: color .2s ease;
@@ -179,7 +194,7 @@ header {
     border-bottom: 2px solid transparent;
 }
 
-.navLink span:before {
+.nav-link span a:before {
     content: '';
     display: block;
     position: absolute;
@@ -193,7 +208,7 @@ header {
     transition: width 0s ease, background .2s ease;
 }
 
-.navLink span:after {
+.nav-link span a:after {
     content: '';
     display: block;
     position: absolute;
@@ -201,23 +216,23 @@ header {
     bottom: 0;
     height: 2px;
     width: 0;
-    background: rgba(255, 255, 255, 0.75);
+    background: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
     -webkit-transition: width .2s ease;
     -moz-transition: width .2s ease;
     -o-transition: width .2s ease;
     transition: width .2s ease;
 }
 
-.navLink span:hover:before {
+.nav-link span a:hover:before {
     width: 100%;
-    background: rgba(255, 255, 255, 0.75);
+    background: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
     -webkit-transition: width .2s ease;
     -moz-transition: width .2s ease;
     -o-transition: width .2s ease;
     transition: width .2s ease;
 }
 
-.navLink span:hover:after {
+.nav-link span a:hover:after {
     width: 100%;
     background: transparent;
     transition-delay: .2s;
@@ -225,213 +240,4 @@ header {
     -moz-transition: all 0s ease;
     -o-transition: all 0s ease;
     transition: all 0s ease;
-}
-
-.navLink span:hover {
-    color: #eee;
-}
-
-.mainBody {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    max-width: 980px !important;
-    margin: 20px auto;
-    align-self: center;
-}
-
-#bodyHeader {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 1;
-    flex-direction: row;
-    justify-content: space-between;
-    max-height: 60px;
-    font-weight: bold;
-}
-
-.upArrow {
-    display: none;
-    align-self: center;
-}
-
-.bodyTitle {
-    margin: 0;
-    display: inline-block;
-    font-weight: 800 !important;
-}
-
-.bodyText {
-    order: 2;
-    max-width: 980px;
-    text-align: justify;
-    text-align-last: left;
-}
-
-.bodyText p {
-    margin-top: 0;
-    margin-bottom: 20px;
-    font-weight: 300 !important;
-}
-
-#skillsHeader {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 4;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#skillsText {
-    order: 5;
-    overflow: auto;
-    white-space: nowrap;
-}
-
-.skills {
-    display: inline-block;
-}
-
-.skillsList {
-    list-style: none;
-    padding: 0 10px 0 0;
-}
-
-#workHeader {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 6;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#workText {
-    order: 7;
-}
-
-.workList {
-    list-style: none;
-    padding: 0;
-}
-
-.workMisc {
-    font-size: 14px;
-}
-
-#projectsHeader {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 8;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#projectsList {
-    order: 9;
-    overflow: auto;
-    white-space: nowrap;
-    padding: 10px;
-    max-height: 320px;
-    overflow-y: hidden;
-}
-
-.projectsItem {
-    width: 300px;
-    height: 250px;
-    display: inline-block;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.25);
-    white-space: normal;
-    vertical-align: middle;
-}
-
-.projectHeader {
-    font-size: 22px;
-    margin-bottom: 0;
-    padding-left: 20px;
-}
-
-.projectBody{
-    padding: 0 20px 20px 20px;
-    font-size: 14px;
-}
-
-#miscHeader {
-    margin: 0;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    order: 10;
-    flex-direction: row;
-    justify-content: space-between;
-    font-weight: 800 !important;
-}
-
-.miscText {
-    order: 11;
-    max-width: 980px;
-    font-weight: 300 !important;
-    vertical-align: middle;
-    align-items: center;
-    text-align: center;
-}
-
-.contactList {
-    margin: 15px 0 15px 0;
-    padding: 0;
-    list-style: none;
-}
-
-.contactItem {
-    padding: 10px 0 10px 0;
-}
-
-.webLink {
-    color: #444;
-}
-
-.webLink:hover {
-    text-decoration: none;
-}
-
-.webLink:active {
-    color: #444;
-}
-
-.webLink:visited {
-    color: #444;
-}
-
-footer {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    height: 100px;
-    background-image: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
-}
-
-.footerText {
-    align-self: center;
-    font-family: 'Roboto', sans-serif;
-    color: #eee;
 }
