--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -11,8 +11,18 @@ body {
 
 .header {
     margin: auto;
-    color: white;
-    background-image: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
+}
+
+.gradient-text {
+    background: -webkit-linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
+    background: -moz-linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
+    background: -ms-linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
+    background: -o-linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
+    background: linear-gradient( 135deg, #CE9FFC 0%, #7367F0 100%);
+    -webkit-text-fill-color: transparent;
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
 }
 
 .center {
