--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -456,18 +456,42 @@ button.purple {
     border-radius: 4px;
     -webkit-box-shadow: 0 9px 14px 0 rgba(43, 48, 58, 0.09);
     box-shadow: 0 9px 14px 0 rgba(43, 48, 58, 0.09);
+    width: 100%;
+    padding: 16px;
+}
+
+.card:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+}
+
+.card-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: -16px;
+    left: -16px;
+    bottom: -16px;
+    right: -16px;
 }
 
 .project-title {
     margin-bottom: 4px;
 }
 
+.card-img {
+    object-fit: cover;
+}
+
 .card-img-overlay {
+    height: 100%;
     background-color: rgba(97, 109, 131, 0.5);
     bottom: 0;
     font-size: 0.8em;
     opacity: 0;
-    padding: 16px;
+    padding: 2em;
 }
 
 .card:hover .card-img-overlay {
@@ -475,14 +499,12 @@ button.purple {
 }
 
 .card:hover .card-img {
-    filter: blur(4px);
+    filter: blur(6px);
 }
 
 .project-code {
     padding: 2px;
 }
-
-
 
 .project-code:first-child {
     padding-left: 0;
